objects/CMPL123CME__EMDR__c.object
<CustomObject>
    <fields>
        <fullName>BMX_Approved_Date__c</fullName>
        <label>Approved Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMX_Close_Date__c</fullName>
        <label>Close Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMX_Competent_Authority_Number__c</fullName>
        <formula>'N/A'</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Competent Authority Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMX_Local_Assessment_Decision__c</fullName>
        <description>US-AER-047</description>
        <formula>If(BMX_Local_Assessment__r.RecordType.DeveloperName = 'Local_Assessment', TEXT(BMX_Local_Assessment__r.BMX_Is_Reportable__c) , '' )</formula>
        <label>Local Assessment Decision</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMX_Local_Assessment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Local Assessment</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>CMPL123CME__Questionnaire__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Local Assessment</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>CMPL123CME__Questionnaire__c</referenceTo>
        <relationshipLabel>EMDR</relationshipLabel>
        <relationshipName>EMDR</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMX_Reportable_Country__c</fullName>
        <formula>'United States'</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reportable Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMX_Submit_for_Review_Done_by__c</fullName>
        <label>Submit for Review Done by</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMX_Time_to_Notify_the_CA__c</fullName>
        <formula>IF( ISBLANK( BMX_Local_Assessment__r.BMX_Global_Assessment__r.BMX_Revised_Awareness_Date__c ), TEXT((DATEVALUE (CMPL123CME__Submitted_Date_Time__c)) - CMPL123CME__Complaint__r.BMX_Customer_Contact_Date__c) ,
TEXT((DATEVALUE (CMPL123CME__Submitted_Date_Time__c)) - BMX_Local_Assessment__r.BMX_Global_Assessment__r.BMX_Revised_Awareness_Date__c)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time to Notify the CA</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__A1_Patient_Identifier__c</fullName>
        <description>Unique patient identifier assigned by the reporter.</description>
        <inlineHelpText>Patient Identifier</inlineHelpText>
        <label>A1 - Patient Identifier</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__A2_Age_Units_Patient__c</fullName>
        <description>Units of patient age.</description>
        <label>A2 - Age Units (Patient)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Years</fullName>
                </value>
                <value>
                    <fullName>Months</fullName>
                </value>
                <value>
                    <fullName>Weeks</fullName>
                </value>
                <value>
                    <fullName>Days</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>NI</fullName>
                </value>
                <value>
                    <fullName>ASKU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__A2_Age_at_Time_of_Event__c</fullName>
        <description>Patient's age when the event occurred.</description>
        <label>A2 - Age at Time of Event</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__A2_DOB_Null__c</fullName>
        <description>Used if the patient's date of birth is not being provided in the report.</description>
        <label>A2 - DOB Null</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>NI</fullName>
                </value>
                <value>
                    <fullName>ASKU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__A2_DOB__c</fullName>
        <description>Patient's date of birth.</description>
        <label>A2 - DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__A2_Patient_Days_Old__c</fullName>
        <formula>CMPL123CME__B3_Date_of_Event__c - CMPL123CME__A2_DOB__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>A2 - Patient Days Old</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__A2_Patient_Months_Old__c</fullName>
        <formula>(YEAR(CMPL123CME__B3_Date_of_Event__c) - YEAR(CMPL123CME__A2_DOB__c) ) * 12  +  
	IF( MONTH(CMPL123CME__B3_Date_of_Event__c) &gt; MONTH(CMPL123CME__A2_DOB__c), 
		IF( DAY(CMPL123CME__B3_Date_of_Event__c) &gt;= DAY(CMPL123CME__A2_DOB__c), 
				MONTH(CMPL123CME__B3_Date_of_Event__c) - MONTH(CMPL123CME__A2_DOB__c), 
				MONTH(CMPL123CME__B3_Date_of_Event__c) - MONTH(CMPL123CME__A2_DOB__c) - 1 
		),
		IF( MONTH(CMPL123CME__B3_Date_of_Event__c) != MONTH(CMPL123CME__A2_DOB__c), 
			IF( DAY(CMPL123CME__B3_Date_of_Event__c) &gt;= DAY(CMPL123CME__A2_DOB__c), 
				MONTH(CMPL123CME__B3_Date_of_Event__c) - MONTH(CMPL123CME__A2_DOB__c), 
				MONTH(CMPL123CME__B3_Date_of_Event__c) - MONTH(CMPL123CME__A2_DOB__c)-1 
			),
			IF( DAY(CMPL123CME__B3_Date_of_Event__c) &gt;= DAY(CMPL123CME__A2_DOB__c), 
				0, 
				-1 
			) 
		) 
	)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>A2 - Patient Months Old</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__A2_Patient_Years_Old__c</fullName>
        <formula>YEAR(CMPL123CME__B3_Date_of_Event__c) - YEAR(CMPL123CME__A2_DOB__c) -
IF( MONTH(CMPL123CME__B3_Date_of_Event__c) &gt; MONTH(CMPL123CME__A2_DOB__c), 
	0 ,
	IF( MONTH(CMPL123CME__B3_Date_of_Event__c) != MONTH(CMPL123CME__A2_DOB__c),
		1 ,
		IF( DAY(CMPL123CME__B3_Date_of_Event__c) &gt;= DAY(CMPL123CME__A2_DOB__c), 
			0,
			1
		)
	)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>A2 - Patient Years Old</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__A3_Gender__c</fullName>
        <description>Patient's gender for form version 2021 Nov-30.</description>
        <label>A3 - Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Intersex</fullName>
                </value>
                <value>
                    <fullName>Transgender</fullName>
                </value>
                <value>
                    <fullName>Prefer not to disclose</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>NI</fullName>
                </value>
                <value>
                    <fullName>ASKU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__A3_Sex__c</fullName>
        <description>Patient's gender.</description>
        <label>A3 - Sex</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>NI</fullName>
                </value>
                <value>
                    <fullName>ASKU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__A4_Weight_Units_Patient__c</fullName>
        <description>Units of weight.</description>
        <label>A4 - Weight Units (Patient)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>LBS</fullName>
                </value>
                <value>
                    <fullName>KG</fullName>
                </value>
                <value>
                    <fullName>G</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>NI</fullName>
                </value>
                <value>
                    <fullName>ASKU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__A4_Weight__c</fullName>
        <description>Patient's weight.</description>
        <label>A4 - Weight</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__A5A_Ethnicity__c</fullName>
        <description>Ethnicity</description>
        <inlineHelpText>Ethnicity</inlineHelpText>
        <label>A5a - Ethnicity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hispanic/Latino</fullName>
                </value>
                <value>
                    <fullName>Not Hispanic/Latino</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>NI</fullName>
                </value>
                <value>
                    <fullName>ASKU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__A5B_Race__c</fullName>
        <description>Race</description>
        <inlineHelpText>Race</inlineHelpText>
        <label>A5b - Race</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Asian</fullName>
                </value>
                <value>
                    <fullName>American Indian or Alaskan Native</fullName>
                </value>
                <value>
                    <fullName>Black or African American</fullName>
                </value>
                <value>
                    <fullName>White</fullName>
                </value>
                <value>
                    <fullName>Native Hawaiian or Other Pacific Islander</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>NI</fullName>
                </value>
                <value>
                    <fullName>ASKU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__B1_AdverseEvent_ProductProblem__c</fullName>
        <description>The type of event being reported.</description>
        <inlineHelpText>Adverse Event/Product Problem</inlineHelpText>
        <label>B1 - Adverse Event/Product Problem</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Adverse Event</fullName>
                </value>
                <value>
                    <fullName>Product Problem</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__B2_Date_of_Death__c</fullName>
        <description>If the patient died, the date the death occurred.</description>
        <label>B2 - Date of Death</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__B2_Death_Date_Null__c</fullName>
        <description>If the patient died, but the date of death is not  being provided in the report.</description>
        <label>B2 - Death Date Null</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>NI</fullName>
                </value>
                <value>
                    <fullName>ASKU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__B2_Outcomes_attributed_to_AE_Null__c</fullName>
        <description>Used if no selections are made in the Outcomes attributed to AE field.</description>
        <label>B2 - Outcomes Attributed to AE Null</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>NI</fullName>
                </value>
                <value>
                    <fullName>ASKU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__B2_Outcomes_attributed_to_AE__c</fullName>
        <description>Resulting patient conditions due to the adverse event(s) being reported.</description>
        <label>B2 - Outcomes Attributed to AE</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Death</fullName>
                </value>
                <value>
                    <fullName>Life-threatening</fullName>
                </value>
                <value>
                    <fullName>Disability or Permanent Damage</fullName>
                </value>
                <value>
                    <fullName>Congenital Anomaly/Birth Defect</fullName>
                </value>
                <value>
                    <fullName>Hospitalization-initial or prolonged</fullName>
                </value>
                <value>
                    <fullName>Other Serious</fullName>
                </value>
                <value>
                    <fullName>Required Intervention</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__B3_Date_of_Event_Null__c</fullName>
        <description>Used if no date of event found.</description>
        <label>B3 - Date of Event Null</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>NI</fullName>
                </value>
                <value>
                    <fullName>ASKU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__B3_Date_of_Event__c</fullName>
        <description>Date problem occurred or date of onset of symptoms.</description>
        <label>B3 - Date of Event</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__B4_Report_Date_Null__c</fullName>
        <label>B4 - Report Date Null</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>NI</fullName>
                </value>
                <value>
                    <fullName>ASKU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__B4_Report_Date__c</fullName>
        <description>Date the report is submitted to FDA. Review this with Rosalind compared to HL7 spreadsheet.</description>
        <inlineHelpText>Date of this Report (Device only)</inlineHelpText>
        <label>B4 - Report Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__B5_Describe_Event_or_Problem__c</fullName>
        <description>Detailed description of adverse event or product problem which may include signs/symptoms, diagnoses, relevant clinical information, medical status prior to event, clinical course, treatment, outcome.</description>
        <label>B5 - Describe Event or Problem</label>
        <length>32765</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__B6_Relevant_Test_Laboratory_Data__c</fullName>
        <description>Any testing or laboratory diagnostics conducted to identify the problem or etiology of the adverse event. May include relevant negative test/lab findings, baseline lab data, lab data used in diagnosing the event, engineering analysis, pathology reports, autopsy reports.</description>
        <label>B6 - Relevant Test/Laboratory Data</label>
        <length>32765</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__B7_Other_Relevant_History__c</fullName>
        <description>Other known patient conditions including preexisting medical diagnoses. Used only for adverse event reports.</description>
        <label>B7 - Other Relevant  History</label>
        <length>32765</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Become_Aware_Date__c</fullName>
        <description>Date that the manufacturer became aware of the reportable event.</description>
        <label>Become Aware Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__C10_Event_Reappeared_After_Reintroduct1__c</fullName>
        <description>C10 - #1 Event Reappeared After Reintro</description>
        <inlineHelpText>C10 - #1 Event Reappeared After Reintro</inlineHelpText>
        <label>C10 - #1 Event Reappeared After Reintro</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Doesn't Apply</fullName>
                </value>
                <value>
                    <fullName>NI</fullName>
                </value>
                <value>
                    <fullName>ASKU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__C10_Event_Reappeared_After_Reintroduct2__c</fullName>
        <description>C10 - #2 Event Reappeared After Reintro</description>
        <inlineHelpText>C10 - #2 Event Reappeared After Reintro</inlineHelpText>
        <label>C10 - #2 Event Reappeared After Reintro</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Doesn't Apply</fullName>
                </value>
                <value>
                    <fullName>NI</fullName>
                </value>
                <value>
                    <fullName>ASKU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__C1_Lot_Number1__c</fullName>
        <description>C1 - #1 Lot #</description>
        <inlineHelpText>C1 - #1 Lot #</inlineHelpText>
        <label>C1 - #1 Lot #</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__C1_Lot_Number2__c</fullName>
        <description>C1 - #2 Lot #</description>
        <inlineHelpText>C1 - #2 Lot #</inlineHelpText>
        <label>C1 - #2 Lot #</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__C1_Manufacturer_Compounder1__c</fullName>
        <description>C1 - #1 Manufacturer/Compounder</description>
        <inlineHelpText>C1 - #1 Manufacturer/Compounder</inlineHelpText>
        <label>C1 - #1 Manufacturer/Compounder</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__C1_Manufacturer_Compounder2__c</fullName>
        <description>C1 - #2 Manufacturer/Compounder</description>
        <inlineHelpText>C1 - #2 Manufacturer/Compounder</inlineHelpText>
        <label>C1 - #2 Manufacturer/Compounder</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__C1_NDC_or_Unique_ID1__c</fullName>
        <description>C1 - #1 NDC # or Unique ID</description>
        <inlineHelpText>C1 - #1 NDC # or Unique ID</inlineHelpText>
        <label>C1 - #1 NDC # or Unique ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__C1_NDC_or_Unique_ID2__c</fullName>
        <description>C1 - #2 NDC # or Unique ID</description>
        <inlineHelpText>C1 - #2 NDC # or Unique ID</inlineHelpText>
        <label>C1 - #2 NDC # or Unique ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__C1_Name_and_Strength1__c</fullName>
        <description>C1 - #1 Name and Strength</description>
        <inlineHelpText>C1 - #1 Name and Strength</inlineHelpText>
        <label>C1 - #1 Name and Strength</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__C1_Name_and_Strength2__c</fullName>
        <description>C1 - #2 Name and Strength</description>
        <inlineHelpText>C1 - #2 Name and Strength</inlineHelpText>
        <label>C1 - #2 Name and Strength</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__C2_Concom_Med_Prod_and_Therapy_Dates__c</fullName>
        <description>C2 - Concom Med Prod and Therapy Dates</description>
        <label>C2 - Concom Med Prod and Therapy Dates</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__C2_Med_Prod_List_and_Treatment_Date_Time__c</fullName>
        <description>List Medical Product and Treatment Given at the Same Time of the Event and Date</description>
        <inlineHelpText>List Medical Product and Treatment Given at the Same Time of the Event and Date</inlineHelpText>
        <label>C2-Med Prod List and Treatment Date Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__C3_1_Number_of_Separate_Dosages_Null__c</fullName>
        <description>C3 - #1 Number of Separate Dosages Null</description>
        <inlineHelpText>C3 - #1 Number of Separate Dosages Null</inlineHelpText>
        <label>C3 - #1 Number of Separate Dosages Null</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>NI</fullName>
                </value>
                <value>
                    <fullName>ASKU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__C3_1_Number_of_Separate_Dosages__c</fullName>
        <description>C3 - #1 Number of Separate Dosages</description>
        <inlineHelpText>C3 - #1 Number of Separate Dosages</inlineHelpText>
        <label>C3 - #1 Number of Separate Dosages</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__C3_2_Number_of_Separate_Dosages_Null__c</fullName>
        <description>C3 - #2 Number of Separate Dosages Null</description>
        <inlineHelpText>C3 - #2 Number of Separate Dosages Null</inlineHelpText>
        <label>C3 - #2 Number of Separate Dosages Null</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>NI</fullName>
                </value>
                <value>
                    <fullName>ASKU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__C3_2_Number_of_Separate_Dosages__c</fullName>
        <description>C3 - #2 Number of Separate Dosages</description>
        <inlineHelpText>C3 - #2 Number of Separate Dosages</inlineHelpText>
        <label>C3 - #2 Number of Separate Dosages</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__C3_Dose1__c</fullName>
        <description>C3 - #1 Dose</description>
        <inlineHelpText>Dose</inlineHelpText>
        <label>C3 - #1 Dose</label>
        <precision>7</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__C3_Dose2__c</fullName>
        <description>C3 - #2 Dose</description>
        <inlineHelpText>C3 - #2 Dose</inlineHelpText>
        <label>C3 - #2 Dose</label>
        <precision>10</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__C3_Dose_Units1__c</fullName>
        <description>C3 - #1 Dose Units</description>
        <inlineHelpText>C3 - #1 Dose Units</inlineHelpText>
        <label>C3 - #1 Dose Units</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>kg kilogram</fullName>
                </value>
                <value>
                    <fullName>g gram</fullName>
                </value>
                <value>
                    <fullName>mg milligram</fullName>
                </value>
                <value>
                    <fullName>μg microgram</fullName>
                </value>
                <value>
                    <fullName>ng nanogram</fullName>
                </value>
                <value>
                    <fullName>pg picogram</fullName>
                </value>
                <value>
                    <fullName>mg/kg milligram/kilogram</fullName>
                </value>
                <value>
                    <fullName>μg/kg microgram/kilogram</fullName>
                </value>
                <value>
                    <fullName>mg/m2 milligram/sq. meter</fullName>
                </value>
                <value>
                    <fullName>μg/m2 microgram/sq. meter</fullName>
                </value>
                <value>
                    <fullName>l litre</fullName>
                </value>
                <value>
                    <fullName>ml millilitre</fullName>
                </value>
                <value>
                    <fullName>μl microlitre</fullName>
                </value>
                <value>
                    <fullName>Bq becquerel</fullName>
                </value>
                <value>
                    <fullName>GBq gigabecquerel</fullName>
                </value>
                <value>
                    <fullName>MBq megabecquerel</fullName>
                </value>
                <value>
                    <fullName>Kbq kilobecquerel</fullName>
                </value>
                <value>
                    <fullName>Ci curie</fullName>
                </value>
                <value>
                    <fullName>mCi millicurie</fullName>
                </value>
                <value>
                    <fullName>μCi microcurie</fullName>
                </value>
                <value>
                    <fullName>nCi nanocurie</fullName>
                </value>
                <value>
                    <fullName>Mol mole</fullName>
                </value>
                <value>
                    <fullName>mmol millimole</fullName>
                </value>
                <value>
                    <fullName>μmol micromole</fullName>
                </value>
                <value>
                    <fullName>Iu international unit</fullName>
                </value>
                <value>
                    <fullName>Kiu Iu (1000s)</fullName>
                </value>
                <value>
                    <fullName>Miu Iu (1,000,000s)</fullName>
                </value>
                <value>
                    <fullName>iu/kg iu/kilogram</fullName>
                </value>
                <value>
                    <fullName>Meq milliequivalent</fullName>
                </value>
                <value>
                    <fullName>% percent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__C3_Dose_Units2__c</fullName>
        <description>C3 - #2 Dose Units</description>
        <inlineHelpText>C3 - #2 Dose Units</inlineHelpText>
        <label>C3 - #2 Dose Units</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>kg kilogram</fullName>
                </value>
                <value>
                    <fullName>g gram</fullName>
                </value>
                <value>
                    <fullName>mg milligram</fullName>
                </value>
                <value>
                    <fullName>μg microgram</fullName>
                </value>
                <value>
                    <fullName>ng nanogram</fullName>
                </value>
                <value>
                    <fullName>pg picogram</fullName>
                </value>
                <value>
                    <fullName>mg/kg milligram/kilogram</fullName>
                </value>
                <value>
                    <fullName>μg/kg microgram/kilogram</fullName>
                </value>
                <value>
                    <fullName>mg/m2 milligram/sq. meter</fullName>
                </value>
                <value>
                    <fullName>μg/m2 microgram/sq. meter</fullName>
                </value>
                <value>
                    <fullName>l litre</fullName>
                </value>
                <value>
                    <fullName>ml millilitre</fullName>
                </value>
                <value>
                    <fullName>μl microlitre</fullName>
                </value>
                <value>
                    <fullName>Bq becquerel</fullName>
                </value>
                <value>
                    <fullName>GBq gigabecquerel</fullName>
                </value>
                <value>
                    <fullName>MBq megabecquerel</fullName>
                </value>
                <value>
                    <fullName>Kbq kilobecquerel</fullName>
                </value>
                <value>
                    <fullName>Ci curie</fullName>
                </value>
                <value>
                    <fullName>mCi millicurie</fullName>
                </value>
                <value>
                    <fullName>μCi microcurie</fullName>
                </value>
                <value>
                    <fullName>nCi nanocurie</fullName>
                </value>
                <value>
                    <fullName>Mol mole</fullName>
                </value>
                <value>
                    <fullName>mmol millimole</fullName>
                </value>
                <value>
                    <fullName>μmol micromole</fullName>
                </value>
                <value>
                    <fullName>Iu international unit</fullName>
                </value>
                <value>
                    <fullName>Kiu Iu (1000s)</fullName>
                </value>
                <value>
                    <fullName>Miu Iu (1,000,000s)</fullName>
                </value>
                <value>
                    <fullName>iu/kg iu/kilogram</fullName>
                </value>
                <value>
                    <fullName>Meq milliequivalent</fullName>
                </value>
                <value>
                    <fullName>% percent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123CME__C3_Frequency1__c</fullName>
        <description>Frequency</description>
        <inlineHelpText>Frequency</inlineHelpText>
        <label>C3 - #1 Frequency</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__C3_Frequency2__c</fullName>
        <description>C3 - #2 Frequency</description>
        <inlineHelpText>C3 - #2 Frequency</inlineHelpText>
        <label>C3 - #2 Frequency</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>